tests/baselines/reference/parserMissingToken2.errors.txt
parserMissingToken2.ts(1,2): error TS1161: Unterminated regular expression literal.


==== parserMissingToken2.ts (1 errors) ====
    / b;
     
!!! error TS1161: Unterminated regular expression literal.